# neo-execution-specs

./: .gitignore  AUDIT-CLAUDE.md  AUDIT-REVIEW.md  CHANGELOG.md  COMPREHENSIVE-AUDIT.md  CONTRIBUTING.md  CSHARP-CONSISTENCY-REPORT.md  CSHARP-VERIFICATION-REPORT.md  ETHEREUM-METHODOLOGY-STUDY.md  NEO-RS-VERIFICATION-REPORT.md  README.md  ROADMAP.md  VERIFICATION-REPORT.md  pyproject.toml
.github/workflows/: diff.yml  neogo-endpoint-matrix.yml  release.yml  test.yml  vectors.yml
docs/: api.md  architecture.md  execution-spec.md  neo-v3.9.1-deep-review-2026-02-07.md  production-readiness.md  testing.md
docs/plans/: 2026-02-14-state-control-vector-expansion.md  2026-02-16-t8n-envelope-validation.md  2026-02-16-t8n-execution-hardening.md  2026-02-16-t8n-strict-mode.md
docs/verification/: live-validation-2026-02-19.md  neo-n3-full-surface-matrix.md  neo-v3.9.1-checklist-template.md  neogo-0.116-known-deltas.txt  neogo-0.116-validation-2026-02-14.md  neogo-0.116-validation-2026-02-16.md
scripts/: README.md  check_mypy_regressions.py  check_native_surface_parity.py  check_release_metadata.py  neo_rs_batch_diff.py  neo_rs_vector_runner.py  neogo_endpoint_matrix.py
src/neo/: __init__.py  exceptions.py  hardfork.py  protocol_settings.py
tests/: test_crypto.py  test_exceptions.py  test_hardfork.py  test_hardfork_enum.py  test_hardfork_extended.py  test_hardfork_extended2.py  test_integration.py  test_merkle.py  test_murmur.py  test_protocol_extended.py  test_protocol_extended2.py  test_protocol_settings.py  test_types.py
tests/contract/: test_contract.py  test_nef.py  test_nef_extended.py
tests/crypto/: __init__.py  test_base58.py  test_bloom.py  test_bloom_filter.py  test_bls.py  test_ecc.py  test_ecc_arithmetic.py  test_ecdsa.py  test_ecdsa_extended.py  test_ecpoint.py  test_ed25519.py  test_hash.py  test_hash_extended.py  test_merkle_tree.py  test_murmur3.py
tests/io/: test_binary_extended.py  test_binary_io.py  test_binary_reader_extended.py  test_binary_writer_extended.py  test_serializable.py
tests/ledger/: __init__.py  test_block_verifier.py  test_blockchain.py  test_blockchain_extended.py  test_header_cache.py  test_ledger_types.py  test_mempool.py  test_mempool_extended.py  test_transaction_verifier.py  test_tx.py  test_verify_result_extended.py
tests/native/: test_contract_management.py  test_contract_management_lifecycle.py  test_contract_mgmt.py  test_cryptolib.py  test_cryptolib_ecdsa.py  test_cryptolib_recovery.py  test_fungible_token.py  test_fungible_token_lifecycle.py  test_gas_token_extended.py  test_gas_token_full.py  test_ledger.py  test_ledger_contract.py  test_native_base.py  (+19 more)
(+439 files in other folders)
