[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neo-execution-specs"
version = "0.1.0"
description = "Python reference implementation of Neo N3 protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Neo Project", email = "dev@neo.org" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
crypto = [
    "cryptography>=41.0",
    "pycryptodome>=3.19",
    "py_ecc>=7.0",
]
all = [
    "neo-execution-specs[dev,crypto]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/neo"]
