[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neo-execution-specs"
version = "0.1.0"
description = "Python reference implementation of Neo N3 protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Neo Project", email = "dev@neo.org" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "regex>=2024.0",
    "cryptography>=41.0",
    "pycryptodome>=3.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
bls = [
    "py_ecc>=7.0",
]
all = [
    "neo-execution-specs[dev,bls]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"tests/vectors/generate_all.py" = ["E402"]
"tests/vectors/validate.py" = ["E402"]

[project.scripts]
neo-diff = "neo.tools.diff.cli:main"
neo-compat = "neo.tools.diff.compat:main"
neo-multicompat = "neo.tools.diff.multicompat:main"
neo-coverage = "neo.tools.diff.coverage:main"
neo-t8n = "neo.tools.t8n.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/neo"]
